# fast-agent

./: .gitignore  .gitmodules  AGENTS.md  README.md  handover.md  hatch_build.py  plan_manifest.md  pyproject.toml  refactor_provider_handover.md  styling.md
.github/workflows/: checks.yml
docs/: ACP_IMPLEMENTATION_OVERVIEW.md  ACP_TESTING.md  PR_562-and-discussion-review.md  requirements.txt
docs-internal/: CODEX_OAUTH.md  a3-styling.md  compaction.md  styling.md  updated-hooks.md
docs/reports/: index-vp-evalstate.md  v0.4.40-release-audit.md
examples/a2a/: agent_executor.py
examples/bedrock/: fast-agent.config.yaml
examples/card-packs/smart/: README.md  card-pack.yaml
examples/custom-agents/: fastagent.config.yaml
examples/data-analysis/: fastagent.config.yaml
examples/experimental/mcp_sessions/: INTEGRATION_MATERIAL_REPORT.md  README.md  _session_base.py  client_notes_server.py  demo_all_sessions.py  demo_fast_agent_sessions.py  hashcheck_server.py  notebook_server.py  selective_session_server.py  session_required_server.py  session_server.py
examples/function-tools/: basic.py  scoping.py
examples/hf-toad-cards/hooks/: save_history.py
examples/mcp/: a3_styling_server.py
examples/mcp/elicitations/: blocking_server.py  elicitation_account_server.py  elicitation_forms_server.py  elicitation_game_server.py  fastagent.config.yaml  game_character_handler.py  url_elicitation_server.py
examples/mcp/mcp-filtering/: fastagent.config.yaml  mcp_server.py
examples/mcp/sampling-with-tools/: fastagent.config.yaml  sampling_tools_server.py
examples/mcp/state-transfer/: fastagent.config.yaml
examples/mcp/vision-examples/: fastagent.config.yaml
examples/new-api/: fastagent.config.yaml  simple_llm.py  simple_llm_advanced.py
examples/openapi/: fastagent.config.yaml  openapi_mcp_server.py
examples/otel/: fastagent.config.yaml
examples/rag/: fastagent.secrets.yaml  pyproject.toml  vertex-rag.py
examples/researcher/: fastagent.config.yaml
examples/setup/: fastagent.config.yaml  fastagent.secrets.yaml.example
examples/tensorzero/: agent.py  fastagent.config.yaml  image_demo.py  simple_agent.py
examples/tensorzero/mcp_server/: mcp_server.py
examples/tool-hooks-declarative/: mixed_tools_and_hooks.py
examples/tool-runner-hooks/: tool_runner_hooks.py
examples/tool-use-agent/: agent.py
examples/workflows/: evaluator.py  fastagent.config.yaml  parallel.py
examples/workflows-md/: fastagent.config.yaml
examples/workflows-md/agents_as_tools_extended/: PMO-orchestrator.md
examples/workflows-md/evaluator/: evaluator.md  generator.md
examples/workflows-md/hf-api-agent/: fastagent.config.yaml
plan/: 03-10-ty-cleanup.md  acp-auth-methods-survey.md  acp-mcp-watch.md  acp-registry-auth-methods-plan.md  agent-card-origin-review.md  agent-card-rfc-multicard.md  agent-card-rfc-sample.md  agent-card-rfc.md  agentcard-standards-mini-article.md  anthropic-tool-search.md  chips.md  dot-logo-designer.html  hook-tool-declarative.md  hot-mcp-acp-oauth.md  hot-mcp-auth.md  hot-mcp-impl-review.md  hot-mcp-slices.md  hot-mcp.md  internal_resources.md  model-namespace.md  model-onboarding-sequence.md  modelux.md  prompt-refactor.md  refactor-enhanced-prompt.md  session-size.md
plan/exp-sessions/: plan.md
publish/fast-agent-acp/: pyproject.toml
publish/hf-inference-acp/: README.md  pyproject.toml
publish/hf-inference-acp/src/hf_inference_acp/: agents.py  cli.py  hf_config.py
publish/hf-inference-acp/src/hf_inference_acp/resources/: hf.config.yaml
publish/hf-inference-acp/src/hf_inference_acp/wizard/: model_catalog.py
resources/shared/: internal_resources_manifest.json  model_overlays.md  smart_agent_cards.md  smart_prompt.md
scripts/: _model_picker_common.py  check_internal_resources.py  cpd.py  event_replay.py  hook_demo_run.py  hook_smoke_test.py  model_picker_proto_dialogs.py  model_picker_proto_prompt.py  model_picker_proto_rich.py  model_picker_proto_split_lists.py  model_picker_proto_split_lists_v1_backup.py  probe_service_tiers.py  session_usage_bounce.py  test_cards_cli_env.sh  test_package_install.sh  typecheck.py
src/fast_agent/: __init__.py  config.py  constants.py  context.py  event_progress.py  interfaces.py  mcp_server_registry.py  paths.py
src/fast_agent/acp/: __init__.py  acp_context.py  command_io.py  content_conversion.py  slash_commands.py  terminal_runtime.py  tool_call_context.py  tool_permissions.py  tool_progress.py  tool_titles.py
src/fast_agent/agents/: __init__.py  agent_types.py  llm_agent.py  llm_decorator.py  mcp_agent.py  smart_agent.py  tool_agent.py  tool_hooks.py  tool_runner.py
src/fast_agent/cards/: __init__.py  manager.py  service.py
src/fast_agent/cli/: __main__.py  command_support.py  constants.py  display.py  env_helpers.py  main.py  shared_options.py
src/fast_agent/commands/: command_catalog.py  command_discovery.py  context.py  history_summaries.py  mcp_command_intents.py  model_capabilities.py  model_details.py  results.py  session_summaries.py  shared_command_intents.py  status_summaries.py  tool_summaries.py
src/fast_agent/core/: agent_app.py  agent_card_loader.py  agent_card_rules.py  agent_card_types.py  agent_card_validation.py  default_agent.py  direct_decorators.py  direct_factory.py  exceptions.py  fastagent.py  function_tool_support.py  instruction.py  instruction_refresh.py  instruction_utils.py  internal_resources.py  keyring_utils.py  model_resolution.py  prompt_templates.py  template_escape.py  tool_input_schema.py  validation.py
src/fast_agent/history/: tool_activities.py
src/fast_agent/hooks/: __init__.py  hook_context.py  hook_messages.py  lifecycle_hook_context.py  session_history.py
src/fast_agent/llm/: fastagent_llm.py  hf_inference_lookup.py  llamacpp_discovery.py  memory.py  model_alias_config.py  model_database.py  model_display_name.py  (+18 more)
tests/: __init__.py
tests/integration/: test_command_surface_parity.py
tests/scripts/: harvest_llm_traces.py  normalize_llm_traces.py
tests/support/: __init__.py  command_surface.py  llm_trace_replay.py
tests/unit/: conftest.py
(+644 files in other folders)
