[project]
name = "fast-agent-mcp"
version = "0.5.6"
description = "Define, Prompt and Test MCP enabled Agents and Workflows"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Shaun Smith", email = "fastagent@llmindset.co.uk"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.13.5,<3.14"
dependencies = [
    "fastapi>=0.121.0",
    "mcp==1.26.0",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
    "pyyaml>=6.0.2",
    "rich>=14.3.3",
    "typer>=0.21.1",
    "anthropic>=0.80.0",
    "openai[aiohttp]>=2.21.0",
    "prompt-toolkit>=3.0.52",
    "aiohttp>=3.13.2",
    "opentelemetry-distro==0.60b1",
    "opentelemetry-exporter-otlp-proto-http==1.39.1",
    "opentelemetry-instrumentation-openai==0.52.1; python_version >= '3.10' and python_version < '4.0'",
    "opentelemetry-instrumentation-anthropic==0.52.1; python_version >= '3.10' and python_version < '4.0'",
    "opentelemetry-instrumentation-mcp==0.52.1; python_version >= '3.10' and python_version < '4.0'",
    "opentelemetry-instrumentation-google-genai==0.6b0",
    "google-genai>=1.52.0",
    "deprecated>=1.2.18",
    "a2a-sdk>=0.3.16",
    "email-validator>=2.2.0",
    "pyperclip>=1.9.0",
    "keyring>=24.3.1",
    "python-frontmatter>=1.1.0",
    "watchfiles>=1.1.0",
    "agent-client-protocol>=0.8.0",
    "tiktoken>=0.12.0",
    "uvloop>=0.22.1; platform_system != 'Windows'",
    "multilspy>=0.0.15",
    "ruamel.yaml>=0.18.16"
]

[project.optional-dependencies]
# For Azure OpenAI with DefaultAzureCredential support, install with: uv pip install fast-agent-mcp[azure]
azure = [
    "azure-identity>=1.14.0"
]
# For AWS Bedrock support, install with: uv pip install fast-agent-mcp[bedrock]
bedrock = [
    "boto3>=1.35.0"
]
# For TensorZero gateway support, install with: uv pip install fast-agent-mcp[tensorzero]
tensorzero = [
    "tensorzero>=2025.7.5"
]
textual = [
    "textual>=6.2.1",
]
# For all provider support, install with: uv pip install fast-agent-mcp[all-providers]
all-providers = [
    "azure-identity>=1.14.0",
    "boto3>=1.35.0",
    "tensorzero>=2025.7.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]

[tool.hatch.build]
include = [
    "src/fast_agent/**/*.py",
    "src/fast_agent/resources/**/*",
    "resources/shared/**/*",
    "src/fast_agent/py.typed",
    "examples/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fast_agent"]
artifacts = [
    "src/fast_agent/resources/examples/**/*",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: tests that connect to external resources (llms)",
    "integration: marks tests as integration tests",
    "simulated_endpoints: marks tests that use simulated external endpoints",
    "unit: marks tests as unit tests"
]

# Filter out utcnow depreciation warnings from the boto3 library (if installed)
# These filters are ignored if botocore is not installed
filterwarnings = [
    "ignore:datetime\\.datetime\\.utcnow\\(\\) is deprecated.*:DeprecationWarning:botocore\\.auth",
    "ignore:datetime\\.datetime\\.utcnow\\(\\) is deprecated.*:DeprecationWarning:botocore\\.endpoint$",
]

# Other pytest options can go here too
testpaths = ["tests"]

[dependency-groups]
dev = [
    "boto3>=1.35.0",
    "multilspy>=0.0.15",
    "pre-commit>=4.0.1",
    "pydantic>=2.10.4",
    "ruamel.yaml>=0.18.0",
    "pyyaml>=6.0.2",
    "ruff>=0.8.4",
    "ty>=0.0.5",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=6.1.1",
    "ipdb>=0.13.13",
]

[project.scripts]
fast-agent = "fast_agent.cli.__main__:main"
apply_patch = "fast_agent.patch.cli:main"
fast-agent-mcp = "fast_agent.cli.__main__:main"
fast-agent-acp = "fast_agent.cli.commands.acp:main"
fast-agent-hf = "fast_agent.cli.commands.hf:main"
prompt-server = "fast_agent.mcp.prompts.__main__:main"


[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "TCH"  # type checking
]
ignore=["E501"]

# More lenient settings for existing code
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]  # Don't require type annotations in tests

[tool.uv.workspace]
members = [
    "publish/fast-agent-acp",
    "publish/hf-inference-acp",
]

[tool.uv.sources]
fast-agent-mcp = { workspace = true }
fast-agent-acp = { workspace = true }
hf-inference-acp = { workspace = true }
